# helm-chart-downloader

./: README.md  checkov-result-bitnami-successfull.txt  generate_manifest.sh  kubescore-result-bitnami-successfull.txt  links.txt  links_download.txt  main.py  pyproject.toml
bitnami-failed/: grafana-operator-manifest.yaml  kube-prometheus-manifest.yaml  kubeapps-manifest.yaml  kuberay-manifest.yaml
bitnami-manifests/: aspnet-core-manifest.yaml  deepspeed-manifest.yaml  discourse-manifest.yaml  drupal-manifest.yaml  ejbca-manifest.yaml  elasticsearch-manifest.yaml  fluentd-manifest.yaml  flux-manifest.yaml  ghost-manifest.yaml  gitea-manifest.yaml  grafana-loki-manifest.yaml  jaeger-manifest.yaml  jenkins-manifest.yaml  keycloak-manifest.yaml  kong-manifest.yaml  kube-state-metrics-manifest.yaml  kubernetes-event-exporter-manifest.yaml  mariadb-galera-manifest.yaml  matomo-manifest.yaml  mediawiki-manifest.yaml  memcached-manifest.yaml  metallb-manifest.yaml  metrics-server-manifest.yaml  milvus-manifest.yaml  mlflow-manifest.yaml  moodle-manifest.yaml  multus-cni-manifest.yaml  mysql-manifest.yaml  nessie-manifest.yaml  nginx-manifest.yaml  node-exporter-manifest.yaml  odoo-manifest.yaml  opencart-manifest.yaml  parse-manifest.yaml  phpbb-manifest.yaml  phpmyadmin-manifest.yaml  pinniped-manifest.yaml  postgresql-manifest.yaml  rabbitmq-manifest.yaml  redis-cluster-manifest.yaml  (+7 more)
bitnami-successful/: airflow-manifest.yaml  apache-manifest.yaml  apisix-manifest.yaml  appsmith-manifest.yaml  argo-cd-manifest.yaml  argo-workflows-manifest.yaml  cassandra-manifest.yaml  (+50 more)
(+7651 files in other folders)
