[tool.poetry]
name = "bat-scrap"
version = "0.1.0"
description = ""
authors = ["Luís Eduardo <eduardovansilva@gmail.com>, Filipe Arruda <filipehenriquester@gmail.com>"]
readme = "README.md"
packages = [{include = "bat_scrap"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
